tests/error/misc_errors/arg_not_annotated.py
from tests.util import compile_guppy


@compile_guppy
def foo(x: bool, y) -> int:
    return y
