tests/error/misc_errors/arg_not_annotated.err
Error: Missing type annotation (at $FILE:5:17)
  | 
3 | 
4 | @compile_guppy
5 | def foo(x: bool, y) -> int:
  |                  ^ Argument requires a type annotation

Guppy compilation failed due to 1 previous error
